// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Lead Story 1 Slice large Article Stack 1`] = `
<DocumentFragment>
  <div
    class="css-1r18k3i"
  >
    <div
      class="css-amkxca"
      data-testid="scroll-container"
    >
      <div
        class="css-35mzo8"
        data-testid="article-container"
        style="position: relative;"
      >
        <div
          class="css-1nw1nne"
        >
          <div
            class="css-1kwj960"
          >
            <picture
              class="css-zp0elg"
            >
              <div
                class="css-5pczz7"
              />
              <img
                alt="This is ALT Text"
                class="css-1qgqq71"
                src="/assets/small_01.jpg"
              />
            </picture>
          </div>
          <div
            class="css-diffbd"
          >
            <a
              class="css-u57k3c"
              href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
              role="link"
            >
              <span
                class="css-17x5lw"
              >
                <span
                  class="css-65zrxz"
                >
                  European cup winner Mihajlovic dies aged 53 after battle with leukaemia
                </span>
              </span>
            </a>
            <div
              class="css-1atazsr"
              data-testid="tag-and-flag"
            >
              <a
                class="css-10d4t8c"
                href="/"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-zhtub2"
                  >
                    Tag
                  </span>
                </span>
              </a>
              <div
                class="css-lew009"
              >
                <hr
                  aria-hidden="true"
                  class="css-15kf7hd"
                  data-testid="divider"
                />
              </div>
              <span
                class="css-1vzvkql"
              >
                Flag1
              </span>
            </div>
          </div>
        </div>
        <hr
          aria-hidden="true"
          class="css-5iyysz"
          data-testid="divider"
        />
        <div
          class="css-1nw1nne"
        >
          <div
            class="css-1kwj960"
          >
            <picture
              class="css-zp0elg"
            >
              <div
                class="css-5pczz7"
              />
              <img
                alt="This is ALT Text"
                class="css-1qgqq71"
                src="/assets/small_02.jpg"
              />
            </picture>
          </div>
          <div
            class="css-diffbd"
          >
            <a
              class="css-u57k3c"
              href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
              role="link"
            >
              <span
                class="css-17x5lw"
              >
                <span
                  class="css-65zrxz"
                >
                  American owners pose threat to English pyramid
                </span>
              </span>
            </a>
          </div>
        </div>
        <hr
          aria-hidden="true"
          class="css-5iyysz"
          data-testid="divider"
        />
        <div
          class="css-1nw1nne"
        >
          <div
            class="css-1kwj960"
          >
            <picture
              class="css-zp0elg"
            >
              <div
                class="css-5pczz7"
              />
              <img
                alt="This is ALT Text"
                class="css-1qgqq71"
                src="/assets/small_03.jpg"
              />
            </picture>
          </div>
          <div
            class="css-diffbd"
          >
            <a
              class="css-u57k3c"
              href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
              role="link"
            >
              <span
                class="css-17x5lw"
              >
                <span
                  class="css-65zrxz"
                >
                  £60m Brazilian prodigy Endrick snubs Chelsea to join Real Madrid
                </span>
              </span>
            </a>
            <div
              class="css-1atazsr"
              data-testid="tag-and-flag"
            >
              <a
                class="css-10d4t8c"
                href="/"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-zhtub2"
                  >
                    Tag
                  </span>
                </span>
              </a>
            </div>
          </div>
        </div>
        <hr
          aria-hidden="true"
          class="css-5iyysz"
          data-testid="divider"
        />
        <div
          class="css-1nw1nne"
        >
          <div
            class="css-1kwj960"
          >
            <picture
              class="css-zp0elg"
            >
              <div
                class="css-5pczz7"
              />
              <img
                alt="This is ALT Text"
                class="css-1qgqq71"
                src="/assets/small_04.jpg"
              />
            </picture>
          </div>
          <div
            class="css-diffbd"
          >
            <a
              class="css-u57k3c"
              href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
              role="link"
            >
              <span
                class="css-17x5lw"
              >
                <span
                  class="css-65zrxz"
                >
                  Blow for rebel clubs as court says Uefa can block Super League
                </span>
              </span>
            </a>
            <div
              class="css-1atazsr"
              data-testid="tag-and-flag"
            >
              <a
                class="css-10d4t8c"
                href=""
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-zhtub2"
                  />
                </span>
              </a>
              <span
                class="css-1vzvkql"
              >
                Flag4
              </span>
            </div>
          </div>
        </div>
        <hr
          aria-hidden="true"
          class="css-5iyysz"
          data-testid="divider"
        />
        <div
          class="css-1nw1nne"
        >
          <div
            class="css-1kwj960"
          >
            <picture
              class="css-zp0elg"
            >
              <div
                class="css-5pczz7"
              />
              <img
                alt="This is ALT Text"
                class="css-1qgqq71"
                src="/assets/small_04.jpg"
              />
            </picture>
          </div>
          <div
            class="css-diffbd"
          >
            <a
              class="css-u57k3c"
              href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
              role="link"
            >
              <span
                class="css-17x5lw"
              >
                <span
                  class="css-65zrxz"
                >
                  Blow for rebel clubs as court says Uefa can block Super League 2
                </span>
              </span>
            </a>
            <div
              class="css-1atazsr"
              data-testid="tag-and-flag"
            >
              <a
                class="css-10d4t8c"
                href="/"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-zhtub2"
                  >
                    Tag
                  </span>
                </span>
              </a>
              <div
                class="css-lew009"
              >
                <hr
                  aria-hidden="true"
                  class="css-15kf7hd"
                  data-testid="divider"
                />
              </div>
              <span
                class="css-1vzvkql"
              >
                Flag5
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render Lead Story 1 Slice small Aricle Stack 1`] = `
<DocumentFragment>
  <div
    class="css-194m366"
  >
    <div
      class="css-1fgalmf"
    >
      <div
        class="css-1nw1nne"
      >
        <div
          class="css-tj8oo8"
        >
          <hr
            aria-hidden="true"
            class="css-1i1gqyx"
            data-testid="divider"
          />
        </div>
        <div
          class="css-1kwj960"
        >
          <picture
            class="css-zp0elg"
          >
            <div
              class="css-5pczz7"
            />
            <img
              alt="This is ALT Text"
              class="css-1qgqq71"
              src="/assets/small_02.jpg"
            />
          </picture>
        </div>
        <div
          class="css-diffbd"
        >
          <a
            class="css-u57k3c"
            href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
            role="link"
          >
            <span
              class="css-17x5lw"
            >
              <span
                class="css-65zrxz"
              >
                American owners pose threat to English pyramid
              </span>
            </span>
          </a>
        </div>
      </div>
    </div>
    <div
      class="css-1fgalmf"
    >
      <div
        class="css-1nw1nne"
      >
        <div
          class="css-tj8oo8"
        >
          <hr
            aria-hidden="true"
            class="css-1i1gqyx"
            data-testid="divider"
          />
        </div>
        <div
          class="css-1kwj960"
        >
          <picture
            class="css-zp0elg"
          >
            <div
              class="css-5pczz7"
            />
            <img
              alt="This is ALT Text"
              class="css-1qgqq71"
              src="/assets/small_03.jpg"
            />
          </picture>
        </div>
        <div
          class="css-diffbd"
        >
          <a
            class="css-u57k3c"
            href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
            role="link"
          >
            <span
              class="css-17x5lw"
            >
              <span
                class="css-65zrxz"
              >
                £60m Brazilian prodigy Endrick snubs Chelsea to join Real Madrid
              </span>
            </span>
          </a>
          <div
            class="css-1atazsr"
            data-testid="tag-and-flag"
          >
            <a
              class="css-10d4t8c"
              href="/"
            >
              <span
                class="css-17x5lw"
              >
                <span
                  class="css-zhtub2"
                >
                  Tag
                </span>
              </span>
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-1fgalmf"
    >
      <div
        class="css-1nw1nne"
      >
        <div
          class="css-tj8oo8"
        >
          <hr
            aria-hidden="true"
            class="css-1i1gqyx"
            data-testid="divider"
          />
        </div>
        <div
          class="css-1kwj960"
        >
          <picture
            class="css-zp0elg"
          >
            <div
              class="css-5pczz7"
            />
            <img
              alt="This is ALT Text"
              class="css-1qgqq71"
              src="/assets/small_04.jpg"
            />
          </picture>
        </div>
        <div
          class="css-diffbd"
        >
          <a
            class="css-u57k3c"
            href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
            role="link"
          >
            <span
              class="css-17x5lw"
            >
              <span
                class="css-65zrxz"
              >
                Blow for rebel clubs as court says Uefa can block Super League
              </span>
            </span>
          </a>
          <div
            class="css-1atazsr"
            data-testid="tag-and-flag"
          >
            <a
              class="css-10d4t8c"
              href=""
            >
              <span
                class="css-17x5lw"
              >
                <span
                  class="css-zhtub2"
                />
              </span>
            </a>
            <span
              class="css-1vzvkql"
            >
              Flag4
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
